--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             text-align: center;
         }
         .question {
-            font-size: 2em;
+            font-size: 3em;
             font-weight: bold;
             color: #333;
         }
@@ -34,6 +34,10 @@
     <div class="container">
         <div class="question">A UFOP TA DE GREVE?</div>
         <div class="answer">SIM</div>
+        <div class="question">QUANDO ACABA A GREVE?</div>
+        <div class="answer">NÃO TEM DATA</div>
+        <div class="question">QUANTO TEMPO JUNINHO NÃO PERGUNTA DA GREVE?</div>
+        <div class="answer">0 DIAS, NOSSO RECORDE É 0 DIAS</div>
     </div>
 </body>
 </html>
