--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <script>
         async function fetchBrasiliaTime() {
             try {
-                const response = await fetch('http://worldtimeapi.org/api/timezone/America/Sao_Paulo');
+                const response = await fetch('https://worldtimeapi.org/api/timezone/America/Sao_Paulo');
                 const data = await response.json();
                 return new Date(data.datetime);
             } catch (error) {
