--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="answer">SIM</div>
         <div class="question">QUANDO ACABA A GREVE?</div>
         <div class="answer">NÃO TEM DATA</div>
-        <div class="question">QUANTO TEMPO JUNINHO NÃO PERGUNTA DA GREVE?</div>
+        <div class="question">QUANTO TEMPO JUNINHO NÃO FALA DA GREVE?</div>
         <div class="answer">0 DIAS, NOSSO RECORDE É 0 DIAS</div>
         <div class="question">QUANTO TEMPO DE GREVE?</div>
         <div class="answer" id="time-counter">Calculando...</div>
